Fix iframe overflow

--- a/cv_green_2023_2.css
+++ b/cv_green_2023_2.css
@@ -223,7 +223,7 @@ h1 {font-size:25px;position:relative;}
 	div#phone_screen:after {
 		background:black;content:'';width:3cm;height:15px;top:0;position:absolute;right:calc(50% - 3cm/2);z-index:9;border-radius:0 0 28px 28px;}
 	iframe#myIframe {
-		height:100%;width:100%;z-index:-1;border-radius:25px;display:none;outline: 13px black solid;outline-offset: -1px}
+		height:100%;width:100%;z-index:-1;border-radius:25px;display:none;outline: 999px black solid;outline-offset: -1px}
 	/*iframe[src="about:blank"]{display:none}*/
 	img#coffee {bottom:100px;left:100px;height:5cm;position:absolute;opacity:.5;mix-blend-mode:multiply;}
 }
